Add concrete staff.